# WxWidgets

./: .gitignore  CMakeLists.txt  WxWidgets.code-workspace
.cache/clangd/index/: colorpane.cpp.1A43FE66825A28E4.idx  drawingcanvas.cpp.5523C9C7C43F2865.idx  main.cpp.0B886F1E0636A574.idx  pensizepane.cpp.0DD6D22B6CC94495.idx  selectablepane.cpp.D237BAB8D8961B1B.idx
Header/: App.h  ColorPane.h  MainFrame.h  SelectablePane.h  drawingcanvas.h  main.h  pensizepane.h
Source/: App.cpp  ColorPane.cpp  MainFrame.cpp  Makefile  SelectablePane.cpp  colorpane.cpp  drawingcanvas.cpp  main.cpp  pensizepane.cpp  selectablepane.cpp
include/: colorpane.h
src/: colorpane.cpp  main.cpp  pensizepane.cpp  selectablepane.cpp
